[package]
name = "morten-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rerun = "0.11.0"

[[bin]]
name = "morten"
path = "src/main.rs"

[[bin]]
name = "skewed_grid"
path = "src/skewed_grid.rs"
